; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_done_graph_rendering.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_done_graph_rendering.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.graph = type { %struct.graph_v2* }
%struct.graph_v2 = type { %struct.TYPE_8__, %struct.TYPE_7__, %struct.TYPE_6__, %struct.TYPE_5__ }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.graph*)* @done_graph_rendering to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @done_graph_rendering(%struct.graph* %0) #0 {
  %2 = alloca %struct.graph*, align 8
  %3 = alloca %struct.graph_v2*, align 8
  store %struct.graph* %0, %struct.graph** %2, align 8
  %4 = load %struct.graph*, %struct.graph** %2, align 8
  %5 = getelementptr inbounds %struct.graph, %struct.graph* %4, i32 0, i32 0
  %6 = load %struct.graph_v2*, %struct.graph_v2** %5, align 8
  store %struct.graph_v2* %6, %struct.graph_v2** %3, align 8
  %7 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %8 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %7, i32 0, i32 3
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @free(i32 %10)
  %12 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %13 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @free(i32 %15)
  %17 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %18 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @free(i32 %20)
  %22 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %23 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @free(i32 %25)
  ret void
}

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
